temp/NetworkPolicy2/NetworkPolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    creationTimestamp: "2020-10-29T13:58:00Z"
    labels:
        tufin-mode: auto-generated
        tufin-owner: tufin-orca
    name: default.redis
    namespace: default
spec:
    ingress:
      - from:
          - podSelector:
                matchLabels:
                    app: indexer
    podSelector:
        matchLabels:
            app: redis
    policyTypes:
      - Ingress
